--- a/calculator.html
+++ b/calculator.html
@@ -4,20 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mod 4 Calculator</title>
+    <style>
+        .calculator {
+            background-color: bisque;
+            border-radius: 5px;
+            padding: 20px;
+        }
+
+        .block {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Addition</h1>
-        <input type="number" id="num1">
-        <input type="number" id="num2">
-        <button onclick= addNumbers()>Add!</button>
-        <p id="result"></p>
-    
+    <h1>Online Calculator</h1>
+        <div class="calculator">
+            <div class="block">
+                <input type="number" id="num1" placeholder="Your First Number">
+                <input type="number" id="num2" placeholder="Your Second Number">
+            </div>
+            <div class="block">
+                <button onclick= "calculate('add')">Add!</button>
+                <button onclick="calculate('subtract')">Subtract!</button>
+                <button onclick="calculate('multiply')">Multiply!</button>
+                <button onclick="calculate('divide')">Divide!</button>
+                <p id="result">Result:</p>
+            </div>
+            <div class="block">
+                <button onclick="reset()">Reset!</button>
+            </div>
+        </div>
     <script>
-        function addNumbers() {
+        function calculate(operation) {
             const num1 = parseFloat(document.getElementById('num1').value);
             const num2 = parseFloat(document.getElementById('num2').value);
-            const sum = num1 + num2;
-            console.log(sum);
+            let result;
+
+            if (operation === 'add') {
+                result = num1 + num2;
+            } else if (operation === 'subtract') {
+                result = num1 - num2;
+            } else if (operation === 'multiply') {
+                result = num1 * num2;
+            } else if (operation === 'divide') {
+                result = num1 / num2;
+            }
+
+            console.log(result);
+
+            document.getElementById('result').textContent = `Result: ${result}`;
+        }
+
+        function reset() {
+            document.getElementById('num1').value = '';
+            document.getElementById('num2').value = '';
+
+            document.getElementById('result').textContent = '';
         }
     </script>
 </body>
