Lab 5 - Manage Data 1

--- a/index.html
+++ b/index.html
@@ -42,40 +42,40 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-12">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card 1</h5>
-                        <p class="card-text">Content for card 1.</p>
+                <template id="news-template">
+                    <div class="news-body">
+                        <h5 class="news-title"></h5>
+                        <p class="news-content"></p>
                     </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card 2</h5>
-                        <p class="card-text">Content for card 2.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card 3</h5>
-                        <p class="card-text">Content for card 3.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card 4</h5>
-                        <p class="card-text">Content for card 4.</p>
-                    </div>
-                </div>
+                </template>
+                <p id="news-templates"></p>
             </div>
         </div>
     </div>
+    <script>
+        let news = [
+                { id: 1, title: 'Election Results', content: "Newly elected minister..." },
+                { id: 2, title: 'Sporting Success', content: "World Cup winners..." },
+                { id: 3, title: 'Tornado Warning', content: "Residents should prepare..." }
+            ];
 
+            function publishNewsArticle(title,content) {
+                let newsTemplate = document.getElementById('news-templates').innerText = '';
+
+                news.forEach( item => {
+                    const itemTemplate = document.getElementById('news-template').content.cloneNode(true);
+
+                    itemTemplate.querySelector('.news-title').innerText = item.title;
+                    itemTemplate.querySelector('.news-content').innerText = item.content;
+
+                document.querySelector('#news-templates').appendChild(itemTemplate);
+                });
+            }
+            
+            publishNewsArticle(news.title, news.content)
+            setInterval(publishNewsArticle(news.title, news.content), 5000);
+
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
