--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </nav>
 
     <div class="container">
+        <h2>News Stand</h2>
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-12">
                 <template id="news-template">
@@ -51,6 +52,15 @@
                 <p id="news-templates"></p>
             </div>
         </div>
+    </div>
+
+    <div class="container">
+        <h3>Submit Your News!</h3>
+        <form onsubmit="postNewArticle(event)">
+            <label>News Title: <input name="title" id="newsTitle"></label> </br>
+            <label>News Content: <input name="content" id="newsContent"></label> </br>
+            <button>Add News Item</button>
+        </form>
     </div>
     <script>
         let news = [
@@ -75,7 +85,21 @@
             };
             
             publishNews()
-            setInterval(publishNews, 5000);
+            let timer = setInterval(publishNews, 5000);
+
+            function postNewArticle(event) {
+                event.preventDefault();
+
+                let newArticleTitle = document.getElementById('newsTitle').value;
+                let newArticleContent = document.getElementById('newsContent').value;
+                news.push({id: news.length + 1, title: newArticleTitle, content: newArticleContent});
+                console.log(news)
+            }
+            
+            //Cancel interval so that you dont have to wait 5 seconds for the new post to be uploaded
+            function cancelInterval() {
+                clearInterval(timer);
+            }
 
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
