--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         .navbar {
             padding: 15px;
         }
+
+        .row {
+            display: flex;
+            flex-wrap: wrap;
+        }
     </style>
 </head>
 
